[gd_scene load_steps=8 format=2]

[ext_resource path="res://trainset/Engine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Camera2.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://trainset/PlayerEngine.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 10, 1, 1000 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 5, 1, 3 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.25, 1 )

[node name="Engine" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="BellPlayer" parent="." index="6"]
attenuation_model = 2
unit_size = 4.0
pitch_scale = 1.65

[node name="HornPlayer2" parent="." index="7"]
attenuation_model = 2

[node name="BellPlayer2" parent="." index="8"]
attenuation_model = 2
unit_size = 4.0
pitch_scale = 1.65

[node name="Label3D" type="Label3D" parent="." index="22"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3.74006, -2.88508 )
pixel_size = 0.0313
billboard = 2
double_sided = false
text = "test"

[node name="CameraBase" type="Spatial" parent="." index="23"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35081, 0 )
script = ExtResource( 3 )

[node name="CameraROT" type="Spatial" parent="CameraBase" index="0"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraBase/CameraROT" index="0"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
doppler_tracking = 1

[node name="Position3D" type="Position3D" parent="." index="24"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -2.5 )

[node name="Camera2" type="Camera" parent="Position3D" index="0"]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="RouteArea" type="Area" parent="." index="25"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="RouteArea" index="0"]
shape = SubResource( 1 )

[node name="StationArea" type="Area" parent="." index="26"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.33435, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="StationArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.70608, 0 )
shape = SubResource( 2 )

[node name="Couplers" type="Area" parent="." index="27"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -2.5 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Couplers" index="0"]
shape = SubResource( 3 )

[node name="Couplers2" type="Area" parent="." index="28"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 2.5 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Couplers2" index="0"]
shape = SubResource( 3 )

[connection signal="area_entered" from="StationArea" to="." method="_on_StationArea_area_entered"]
[connection signal="area_exited" from="StationArea" to="." method="_on_StationArea_area_exited"]
[connection signal="area_entered" from="Couplers" to="." method="_on_Couplers_area_entered"]
[connection signal="area_entered" from="Couplers2" to="." method="_on_Couplers2_area_entered"]
